style(client): allow scrolling to fix hidden emergency events in dropdown if list is too long

--- a/client/src/styles/partials/_main.scss
+++ b/client/src/styles/partials/_main.scss
@@ -51,3 +51,19 @@ body {
     line-clamp: 2;
     -webkit-box-orient: vertical;
 }
+
+.dropup {
+    .emergency-menu {
+        max-height: 260px;
+        overflow: auto;
+
+        ul {
+            overflow: auto;
+        }
+    }
+}
+
+.emergency-menu.show {
+    display: flex;
+    flex-direction: column;
+}
